[package]
name = "tproxy"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rocket = { workspace = true, features = ["mtls"] }
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
ipnet = { workspace = true, features = ["serde"] }
fs-err.workspace = true
clap = { workspace = true, features = ["derive", "string"] }
shared_child.workspace = true
tokio = { workspace = true, features = ["full"] }
rustls.workspace = true
tokio-rustls = { workspace = true, features = ["ring"] }
rinja.workspace = true
hex.workspace = true
parcelona.workspace = true
hickory-resolver.workspace = true
pin-project.workspace = true
serde_json.workspace = true
rand.workspace = true
git-version.workspace = true

ra-rpc = { workspace = true, features = ["rocket"] }
tproxy-rpc.workspace = true
certbot.workspace = true
bytes.workspace = true
safe-write.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = ["resource"] }

[dev-dependencies]
insta.workspace = true
