[package]
name = "dstack-vmm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rocket = { workspace = true, features = ["mtls"] }
rocket-vsock-listener = { workspace = true }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
shared_child.workspace = true
bon.workspace = true
uuid = { workspace = true, features = ["v4"] }
sha2.workspace = true
hex.workspace = true
fs-err.workspace = true
dirs.workspace = true
which.workspace = true
clap = { workspace = true, features = ["derive", "string"] }
humantime.workspace = true
strip-ansi-escapes.workspace = true
tailf.workspace = true
tokio = { workspace = true, features = ["full"] }
git-version.workspace = true
rocket-apitoken.workspace = true

supervisor-client.workspace = true
ra-rpc = { workspace = true, features = ["client", "rocket"] }
dstack-vmm-rpc.workspace = true
dstack-kms-rpc.workspace = true
path-absolutize.workspace = true
host-api.workspace = true
safe-write.workspace = true
guest-api = { workspace = true, features = ["client"] }
load_config.workspace = true
key-provider-client.workspace = true
dstack-types.workspace = true
hex_fmt.workspace = true
lspci.workspace = true

[dev-dependencies]
insta.workspace = true
