[package]
name = "certbot-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
certbot = { path = "../" }
clap = { version = "4.5.20", features = ["derive"] }
documented = "0.8.0"
fs-err = "3.0.0"
serde = { version = "1.0.213", features = ["derive"] }
tokio = { version = "1.41.0", features = ["full"] }
toml_edit = { version = "0.22.22", features = ["serde"] }
tracing-subscriber = "0.3.18"
