[package]
name = "certbot-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "certbot"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
certbot.workspace = true
clap.workspace = true
documented.workspace = true
fs-err.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["full"] }
toml_edit.workspace = true
tracing-subscriber.workspace = true
rustls.workspace = true
