[package]
name = "dstack-mr-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dstack-mr"
path = "src/main.rs"

[dependencies]
clap.workspace = true
dstack-mr.workspace = true
anyhow.workspace = true
hex.workspace = true
dstack-types.workspace = true
fs-err.workspace = true
serde_json.workspace = true
