[package]
name = "dstack-gateway-rpc"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
prpc.workspace = true
prost.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
scale = { workspace = true, features = ["derive"] }

[build-dependencies]
prpc-build.workspace = true
