[package]
name = "dstack-kms-rpc"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
prpc.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
scale.workspace = true

[build-dependencies]
prpc-build.workspace = true
fs-err.workspace = true
